# coprtree

./: .gitignore  README.md  api.py  availability.py  codecov.yml  dependency_graph.py  main.py  metadata.py  pyproject.toml  repo_check.py
.github/workflows/: python-diff-lint.yml  release.yml  tests.yml  zizmor.yml
cli/: build_parser.py  custom.py  error_handler.py  main.py  output.py  submit.py  supported_chroots.py
coprtree/: README.md  constants.py  coprtree.py  dependency_graph.py  exceptions.py  metadata.py  models.py  normalize.py  providers.py  pyproject.toml  repo_check.py
coprtree-cli/: README.md  pyproject.toml
coprtree-cli/src/: __main__.py
coprtree-cli/src/coprtree_cli/: __main__.py  build_parser.py
coprtree-cli/src/scripts/: cpanspec.sh
coprtree-cli/tests/: test_cli.py
coprtree/src/: chroots.py  coprtree.py  metadata.py  models.py  normalize.py
coprtree/src/coprtree/: dependency_graph.py  providers.py  repo_check.py
coprtree/tests/: packages.json  test_providers.py  test_repo_check.py  test_resolve_dependencies.py
coprtree/tests/integration/: test_repo_check.py  test_resolve_dependencies.py
coprtree/tests/unit/: test_providers.py
tests/: packages.json  packages_list.py  test_cli.py  test_distributions.py  test_providers.py  test_repo_check.py  test_resolve_dependencies.py
