[project]
name = "coprtree"
version = "0.1.0"
description = "Resolve a package's dependency tree into parallel Fedora Copr build levels"
authors = [{ name="Sundaram Krishnan", email="krishnsundaram@gmail.com" }]
readme = "README.md"
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]
keywords = ["fedora", "copr", "rpm", "dnf", "packaging", "build"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
 ]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "packaging>=26.2",
]

[project.urls]
Homepage = "https://github.com/sundaram123krishnan/coprtree"
Repository = "https://github.com/sundaram123krishnan/coprtree"
Issues = "https://github.com/sundaram123krishnan/coprtree/issues"

[dependency-groups]
test = ["pytest", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/coprtree"]

[tool.pytest.ini_options]
testpaths = ["tests"]
